@@ -289,6 +289,8 @@ version 25-git (????-??-??):
   - improvement: customers can be filtered by 'no zip code' virtual status [chilan]
   - enhancement: customer can approve selected documents from userpanel using sms one-time
     code authentication [chilan]
+  - improvement: 'phpui.default_customer_consents' specified which customer consents are
+    checked by default during add customer form open ('data_processing' is default) [chilan]
 
 version 24.0 (2019-05-16):
 
